--- a/js/package.json
+++ b/js/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Wolfgang Goedel",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^16.0.0"
+  }
 }
