--- a/re/bsconfig.json
+++ b/re/bsconfig.json
@@ -7,8 +7,9 @@
   "sources": [
     "src"
   ],
+  "reason": { "react-jsx" : 2 },
   "bs-dependencies" : [
-      // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
+      "reason-react"
   ],
   "namespace": true,
   "package-specs": ["es6"],
