--- a/re/package.json
+++ b/re/package.json
@@ -12,5 +12,9 @@
   "license": "MIT",
   "devDependencies": {
     "bs-platform": "1.9.2"
+  },
+  "dependencies": {
+    "react": "^16.0.0",
+    "reason-react": "^0.2.4"
   }
 }
